--- a/sports-app/src/main/resources/filters/test.properties
+++ b/sports-app/src/main/resources/filters/test.properties
@@ -3,9 +3,9 @@ yanbao.uuid.expire.time=1800
 
 #jdbc config
 jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://192.168.2.201:3306/bolovens_test?useUnicode=true&amp;characterEncoding=utf8&amp;allowMultiQueries=true
+jdbc.url=jdbc:mysql://120.25.120.154:3306/bolovens_test?useUnicode=true&amp;characterEncoding=utf8&amp;allowMultiQueries=true
 jdbc.username=root
-jdbc.password=1q2w3e
+jdbc.password=qwe123
 
 
 #redis config
@@ -14,7 +14,7 @@ redis.port=6379
 redis.timeout=30000
 #redis有设置密码时请到spring-content.xml配置文件设置
 redis.password=null
-redis.database=5
+redis.database=15
 redis.maxTotal=1024
 redis.maxIdle=200
 redis.maxWaitMillis=10000
