--- a/sports-web/src/main/resources/filters/test.properties
+++ b/sports-web/src/main/resources/filters/test.properties
@@ -3,9 +3,9 @@ yanbao.uuid.expire.time=1800
 
 #jdbc config
 jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://120.25.120.154:3306/bolovens_test?useUnicode=true&amp;characterEncoding=utf8&amp;allowMultiQueries=true
+jdbc.url=jdbc:mysql://120.25.120.154:3306/sports?useUnicode=true&amp;characterEncoding=utf8&amp;allowMultiQueries=true
 jdbc.username=root
-jdbc.password=1q2w3e
+jdbc.password=qwe123
 
 
 #redis config
