--- a/sports-web/src/main/resources/filters/dev.properties
+++ b/sports-web/src/main/resources/filters/dev.properties
@@ -13,7 +13,7 @@ redis.host=192.168.2.202
 redis.port=6379
 redis.timeout=30000
 #redis有设置密码时请到spring-content.xml配置文件设置
-redis.password=null
+redis.password=yanbao
 redis.database=12
 redis.maxTotal=1024
 redis.maxIdle=200
