--- a/sports-web/src/main/resources/filters/dev.properties
+++ b/sports-web/src/main/resources/filters/dev.properties
@@ -8,12 +8,11 @@ jdbc.username=root
 jdbc.password=qwe123
 
 
-#redis config
-redis.host=192.168.2.202
+redis.host=120.25.120.154
 redis.port=6379
 redis.timeout=30000
 #redis有设置密码时请到spring-content.xml配置文件设置
-redis.password=yanbao
+redis.password=1q2w3e!@#
 redis.database=12
 redis.maxTotal=1024
 redis.maxIdle=200
