--- a/sports-app/src/main/resources/filters/dev.properties
+++ b/sports-app/src/main/resources/filters/dev.properties
@@ -9,11 +9,11 @@ jdbc.password=qwe123
 
 
 #redis config
-redis.host=192.168.2.202
+redis.host=120.25.120.154
 redis.port=6379
 redis.timeout=30000
 #redis有设置密码时请到spring-content.xml配置文件设置
-redis.password=yanbao
+redis.password=1q2w3e!@#
 redis.database=15
 redis.maxTotal=1024
 redis.maxIdle=200
