--- a/sports-task/src/main/resources/filters/dev.properties
+++ b/sports-task/src/main/resources/filters/dev.properties
@@ -3,17 +3,16 @@ yanbao.uuid.expire.time=1800
 
 #jdbc config
 jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://192.168.2.201:3306/liangzibi_dev?useUnicode=true&amp;characterEncoding=utf8&amp;allowMultiQueries=true
+jdbc.url=jdbc:mysql://120.25.120.154:3306/sports?useUnicode=true&amp;characterEncoding=utf8&amp;allowMultiQueries=true
 jdbc.username=root
-jdbc.password=1q2w3e
+jdbc.password=qwe123
 
 
-#redis config
-redis.host=192.168.2.202
+redis.host=120.25.120.154
 redis.port=6379
 redis.timeout=30000
 #redis有设置密码时请到spring-content.xml配置文件设置
-redis.password=null
+redis.password=1q2w3e!@#
 redis.database=0
 redis.maxTotal=2048
 redis.maxIdle=500
