--- a/sports-app/src/main/resources/filters/pro.properties
+++ b/sports-app/src/main/resources/filters/pro.properties
@@ -3,9 +3,9 @@ yanbao.uuid.expire.time=1800
 
 #jdbc config
 jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://104.37.212.151:3306/bolovens_pro?useUnicode=true&amp;characterEncoding=utf8&amp;allowMultiQueries=true
+jdbc.url=jdbc:mysql://39.109.127.161:3306/bolovens_pro?useUnicode=true&amp;characterEncoding=utf8&amp;allowMultiQueries=true
 jdbc.username=root
-jdbc.password=LZB*PI=3.1415926
+jdbc.password=qwe123!#$%#%#9865QWE
 
 
 #redis config
