--- a/sports-web/src/main/resources/filters/pro.properties
+++ b/sports-web/src/main/resources/filters/pro.properties
@@ -3,17 +3,17 @@ yanbao.uuid.expire.time=1800
 
 #jdbc config
 jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://104.37.212.151:3306/bolovens_pro?useUnicode=true&amp;characterEncoding=utf8&amp;allowMultiQueries=true
+jdbc.url=jdbc:mysql://172.5.67.2:3306/sports?useUnicode=true&amp;characterEncoding=utf8&amp;allowMultiQueries=true
 jdbc.username=root
-jdbc.password=LZB*PI=3.1415926
+jdbc.password=qwe123!#$%#%#9865QWE
 
 
 #redis config
 redis.host=127.0.0.1
-redis.port=6379
+redis.port=6399
 redis.timeout=30000
 #redis有设置密码时请到spring-content.xml配置文件设置
-redis.password=null
+redis.password=1q2w3e!@#
 redis.database=0
 redis.maxTotal=1024
 redis.maxIdle=200
