--- a/sports-app/src/main/resources/filters/dev.properties
+++ b/sports-app/src/main/resources/filters/dev.properties
@@ -3,14 +3,14 @@ yanbao.uuid.expire.time=1800
 
 #jdbc config
 jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://120.76.43.39:3306/sports?useUnicode=true&amp;characterEncoding=utf8&amp;allowMultiQueries=true
+jdbc.url=jdbc:mysql://172.5.67.2:3306/sports_test?useUnicode=true&amp;characterEncoding=utf8&amp;allowMultiQueries=true
 jdbc.username=root
-jdbc.password=qwe123
+jdbc.password=qwe123!#$%#%#9865QWE
 
 
 #redis config
-redis.host=120.76.43.39
-redis.port=6379
+redis.host=172.5.67.2
+redis.port=6399
 redis.timeout=30000
 #redis有设置密码时请到spring-content.xml配置文件设置
 redis.password=1q2w3e!@#
