--- a/sports-task/src/main/resources/filters/dev.properties
+++ b/sports-task/src/main/resources/filters/dev.properties
@@ -3,21 +3,21 @@ yanbao.uuid.expire.time=1800
 
 #jdbc config
 jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://39.109.127.161:3306/sports?useUnicode=true&amp;characterEncoding=utf8&amp;allowMultiQueries=true
+jdbc.url=jdbc:mysql://39.109.127.161:3306/sports_test?useUnicode=true&amp;characterEncoding=utf8&amp;allowMultiQueries=true
 jdbc.username=root
 jdbc.password=qwe123!#$%#%#9865QWE
 
 
-
+#redis config
 redis.host=39.109.127.161
 redis.port=6399
 redis.timeout=30000
 #redis有设置密码时请到spring-content.xml配置文件设置
 redis.password=1q2w3e!@#
-redis.database=0
-redis.maxTotal=2048
-redis.maxIdle=500
-redis.maxWaitMillis=100000
+redis.database=15
+redis.maxTotal=1024
+redis.maxIdle=200
+redis.maxWaitMillis=10000
 redis.testOnBorrow=true
 redis.testOnReturn=true
 redis.testWhileIdle=true
@@ -33,12 +33,12 @@ scp.ip=192.168.2.200
 scp.port=22
 scp.userName=root
 scp.passWord=yanbao
-scp.remoteRootDir=/home/sutongbao/file/dev
+scp.remoteRootDir=/home/pineapple/file/dev
 
 #sms config
 sms.key=0c6b5e648c8d44778805121f531aca6e
 sms.url=http://v1.avatardata.cn/Sms/Send
-sms.templateId=a0e9d2a9f79c410e96972994b7ae0ef8
+sms.templateId=632ec7d7620e492481f7dda93e7674a7
 sms.outTime=300
 
 #bit coin config
@@ -50,7 +50,7 @@ bitCoin.exrateUrl=https://data.ripple.com/v2/exchange_rates/XRP/USD+rvYAfWj5gh67
 bitCoin.timeout=600
 
 #分享地址
-shareUrl=http://192.168.2.202:8910/register.html
+shareUrl=http://192.168.2.202:8940/register.html
 
 
 
