--- a/sports-task/src/main/resources/filters/pro.properties
+++ b/sports-task/src/main/resources/filters/pro.properties
@@ -29,28 +29,28 @@ redis.minEvictableIdleTimeMillis=6000
 user.sessionTimeout=259200
 
 #scp config
-scp.ip=104.37.212.152
+scp.ip=127.0.0.1
 scp.port=22
 scp.userName=root
-scp.passWord=QW~FK%LK*(114)+kill
-scp.remoteRootDir=/home/sutongbao/file
+scp.passWord=YT#OP@JK%(119)+hi
+scp.remoteRootDir=/home/liangzibi/file
 
 #sms config
 sms.key=0c6b5e648c8d44778805121f531aca6e
 sms.url=http://v1.avatardata.cn/Sms/Send
-sms.templateId=a0e9d2a9f79c410e96972994b7ae0ef8
+sms.templateId=632ec7d7620e492481f7dda93e7674a7
 sms.outTime=300
 
 #bit coin config
 bitCoin.host=121.199.19.29
-bitCoin.port=20725
-bitCoin.login=vpayuser
-bitCoin.password=vpaypassword
+bitCoin.port=20807
+bitCoin.login=user
+bitCoin.password=password
 bitCoin.exrateUrl=https://data.ripple.com/v2/exchange_rates/XRP/USD+rvYAfWj5gh67oV6fW32ZzP3Aw4Eubs59B?live=true
 bitCoin.timeout=600
 
 #∑÷œÌµÿ÷∑
-shareUrl=http://104.37.212.152:9001/register.html
+shareUrl=http://104.37.212.153:9001/register.html
 
 
 
