--- a/sports-web/src/main/resources/filters/dev.properties
+++ b/sports-web/src/main/resources/filters/dev.properties
@@ -8,12 +8,13 @@ jdbc.username=root
 jdbc.password=qwe123!#$%#%#9865QWE
 
 
+#redis config
 redis.host=39.109.127.161
 redis.port=6399
 redis.timeout=30000
 #redis有设置密码时请到spring-content.xml配置文件设置
 redis.password=1q2w3e!@#
-redis.database=12
+redis.database=15
 redis.maxTotal=1024
 redis.maxIdle=200
 redis.maxWaitMillis=10000
@@ -25,14 +26,14 @@ redis.numTestsPerEvictionRun=10
 redis.minEvictableIdleTimeMillis=6000
 
 #user config
-user.sessionTimeout=18000
+user.sessionTimeout=259200
 
 #scp config
-scp.ip=192.168.2.201
+scp.ip=192.168.2.200
 scp.port=22
 scp.userName=root
 scp.passWord=yanbao
-scp.remoteRootDir=/home/liangzibi/file
+scp.remoteRootDir=/home/pineapple/file/dev
 
 #sms config
 sms.key=0c6b5e648c8d44778805121f531aca6e
@@ -45,9 +46,14 @@ bitCoin.host=192.168.2.174
 bitCoin.port=20099
 bitCoin.login=user
 bitCoin.password=password
-bitCoin.exrateUrl=https://www.yuanbao.com/api_market/getinfo_cny/coin/xrp
+bitCoin.exrateUrl=https://data.ripple.com/v2/exchange_rates/XRP/USD+rvYAfWj5gh67oV6fW32ZzP3Aw4Eubs59B?live=true
 bitCoin.timeout=600
- 
+
+#分享地址
+shareUrl=http://192.168.2.202:8940/register.html
+
+
+
 
 
 
