--- a/sports-web/src/main/resources/filters/dev.properties
+++ b/sports-web/src/main/resources/filters/dev.properties
@@ -3,7 +3,7 @@ yanbao.uuid.expire.time=1800
 
 #jdbc config
 jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://39.109.127.161:3306/sports?useUnicode=true&amp;characterEncoding=utf8&amp;allowMultiQueries=true
+jdbc.url=jdbc:mysql://39.109.127.161:3306/sports_test?useUnicode=true&amp;characterEncoding=utf8&amp;allowMultiQueries=true
 jdbc.username=root
 jdbc.password=qwe123!#$%#%#9865QWE
 
